css/style.css
/* ... */
ul#ticker li {
    padding: 10px;
    margin: 0 auto;
}
/*------------------------------------------------------------------------------*/
/* Typer Animation Style */

.css-typer {
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    -webkit-animation: type 3s steps(50, end);
    animation: type 3s steps(50, end);
}
@keyframes type {
    from {
        width: 0;
    }
}
@-webkit-keyframes type {
    from {
        width: 0;
    }
}
/*------------------------------------------------------------------------------*/
/* Spin Animation Style */

.spin {
    -moz-animation: spin 5s infinite linear;
    -webkit-animation: spin 5s infinite linear;
}
.spin-off {
    -moz-animation: spinoff 6s infinite linear;
    -webkit-animation: spinoff 6s infinite linear;
}
@-moz-keyframes spin {
    0% {
        -moz-transform: rotate(0deg);
    }
    100% {
        -moz-transform: rotate(360deg);
    }
    ;
}
@-moz-keyframes spinoff {
    0% {
        -moz-transform: rotate(0deg);
    }
    100% {
        -moz-transform: rotate(-360deg);
    }
    ;
}
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
    }
    ;
}
@-webkit-keyframes spinoff {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(-360deg);
    }
    ;
}
/*Own css*/

.cir-logo {
    position: relative;
}
.circluar-logo {
    position: absolute;
    z-index: 100;
    margin-top: 18em;
    margin-left: 6.9em;
}
/* Box Data */

.box-data a {
    text-decoration: none;
}
.box-data .open-position {
    text-align: center;
    background-color: rgba(249, 249, 249, 0.21);
    color: rgb(98, 98, 98);
    padding: 2em;
    width: 100%;
    margin: 20px 0;
    height: 16em;
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    position: relative;
    overflow: hidden;
    text-align: center;
}
.box-data .open-position:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 0;
    right: 0;
    bottom: 0;
    background: #2098d1;
    height: 4px;
    -webkit-transform: translateY(4px);
    transform: translateY(4px);
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}
.box-data .open-position:hover:before, .box-data .open-position:focus:before, .box-data .open-position:active:before {
    -webkit-transform: translateY(0);
    transform: translateY(0);
}
/* Data Bar */

.data_bar {
    font-size: 1.8em;
    margin-top: 0.1em;
}
.page-data > .row.data_bar {
    margin-bottom: 10px;
}
section.module .row .page-title {
    font-size: 3.5em;
}
.data_bar span:nth-child(1) {
    background-color: rgb(115, 115, 115);
    padding: .1em .2em;
    opacity: 0.9;
    color: white;
    text-align: right;
}
.data_bar span:nth-child(1):hover {
    opacity: 1;
}
.data_bar span:nth-child(1).danger {
    background-color: rgb(158, 50, 41);
}
.data_bar span:nth-child(1).primary {
    background-color: rgb(8, 56, 121);
}
.data_bar span:nth-child(1).info {
    background-color: rgb(26, 145, 197);
}
.data_bar span:nth-child(1).warning {
    background-color: rgb(189, 122, 17);
}
.data_bar span:nth-child(1).success {
    background-color: rgb(17, 189, 117);
}
.data_bar span:nth-child(2) {
    background-color: rgba(208, 208, 208, 0.3);
    padding: .1em .2em;
    white-space: pre-wrap;
    line-height: 160%;
    color: rgb(98, 97, 97);
}
.mybox {
    height: 5em;
    background-color: white;
    text-align: center;
    font-size: 3em;
}
/* Team Box  */
.team {
    max-width: 1800px;
    margin: 0 auto;
}
.team_box_img {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 300px;
    padding: 0;
    text-align: center;
}
.team_box_img.details {
    max-width: 300px;
    margin: 1em auto;
    border: 4px solid #fff;
    border-radius: 50%;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
}
.panel.panel-default.team-panel {
    border-radius: 0;
    box-shadow: 0 0 3px rgba(0,0,0,.3);
    border: 5px solid #FFF;
    overflow: hidden;
    background-size: cover;
}
.panel.panel-default.box {
    border: 1px solid #DDD;
    border-bottom-width: 2px;
    box-shadow: none;
}
.team_box_img.long {
    height: 400px;
}
.hover-div {
    position: relative;
    color: white;
    min-height: 100%;
    min-width: 100%;
    opacity: 0;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}
.hover-div:hover {
    opacity: 1;
    background-color: rgba(39, 39, 39, 0.87);
    cursor: default;
}
.detail-box1,
.bottom-box1 {
    padding: 5px 15px;
}
.detail-box1 .name {
    text-align: center;
    margin: 0 0 .25em;
}

.bottom-box1 {
    text-align: center;
    min-height: 110px;
    min-width: 100%;
    bottom: 100px;
    position: absolute;
    color: white;
}
.bottom-box1> p.desc {
    font-family: 'Kaushan Script', cursive;
    font-weight: 300;
    font-size: 1.3em;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}
.detail-box2 {
    text-align: center;
}
.detail-box2,
.bottom-box2 {
    padding: 5px 15px;
}
.bottom-box2 {
    min-height: 70px;
    min-width: 100%;
    background-color: rgba(255, 255, 255, 1);
    bottom: -70px;
    position: absolute;
    color: rgb(61, 61, 61);
    transition: all 0.3s ease-out;
}
.hover-div:hover .bottom-box2 {
    bottom: 0;
}
/* ... */

